# TitanOfIndustry-sharable

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  docker-compose.neo4j.yml
agent/: __init__.py  adk_state.py  agent.py  approved_mcp.py  config.toml  intern_beats.toml  memory.py  memory_dream.py  memory_graph.py  memory_mcp.py  migrate_memory_scope.py  opencode_tool.py  paperclip_tool.py  research_intern.py
deploy/: ab-auditor.service  ab-auditor.timer  company-a-anomaly-monitor.service  company-a-anomaly-monitor.timer  company-a-live.env.example  company-a-nav-snapshot.service  company-a-nav-snapshot.timer  company-a-shadow-bandit.service  company-a-shadow-bandit.timer  company-a-watchdog-futures.service  company-a-watchdog-futures.timer  company-a-watchdog.service  company-a-watchdog.timer  daily-kraken-reconciliation.service  daily-kraken-reconciliation.timer  live-position-monitor.service  live-position-monitor.timer  memory-dream.service  memory-dream.timer  mergatroid-voice.service  research-intern.service
docs/: elevenlabs-voice.md
opencode/: opencode.json
proxy/: __init__.py  hooks.py  litellm-proxy.yaml
scripts/: check-model.sh  codex-auth-link.py  codex-auth-link.sh  model_manager.py  serve-embed-cpu.sh  serve-vllm-embed.sh  serve-vllm-engine.sh  serve-vllm.sh  serve-voice.sh  start-stack.sh  vllm-keepwarm.sh  voice-check.sh
tests/: test_approved_mcp.py  test_concurrency_throttle.py  test_memory.py  test_memory_dream.py  test_memory_graph.py  (+6 more)
voice/: bot.py  paperclip.py  prompt.py  pyproject.toml  server.py  tools.py
(+21 files in other folders)
